kitsune/sumo/static/less/questions.less
/* ... */
.answers {
  .answer-tools {
    margin: 0 0 20px 130px;
    padding: 0 20px;

    > a {
      float: right;
      margin: 1px 0;
    }

    > form {
      float: left;
      text-transform: uppercase;

      .btn {
        text-transform: none;
      }
    }
  }

  .avatar {
    margin-bottom: 10px;

    img {
      border: 6px solid #fff;
    }
  }

  .helpful-count {
    &:before {
      content: '\2665';
      font-size: 20px;
      margin-right: 2px;
    }
  }

  .is-helpful {
    color: @textOrange;
  }

  .is-owner {
    color: @textBlue;
  }

  .is-solution {
    color: @textGreen;
  }

  .main-content {
    background: #fff;
    margin: 0 0 20px 130px;
    padding: 20px 30px;
    position: relative;

    &:before {
      border-color: transparent #fff;
      border-style: solid;
      border-width: 11px 11px 11px 0;
      height: 0;
      content: '';
      left: -11px;
      position: absolute;
      top: 20px;
      width: 0;
    }

    h3 {
      margin-top: 0;
    }

    > label {
      display: block;
      margin-top: 12px;
    }

    .read-more {
      margin-right: 30px;
    }

    .solution {
      border-top: 1px dotted @borderLightGrey;
      margin-top: 30px;
      padding-top: 30px;
    }

    .solution {
      h3 {
        color: @textGreen;
        display: inline;
      }
    }
  }

  .notice {
    background: url('../img/warning-stripes.png') top left repeat-x #ffe;
    border: 1px solid #fffbe7;
    margin: 0 0 20px 0;
    padding: 20px 30px;
  }

  .question-meta {
    font-size: 12px;
    margin-bottom: 20px;
    text-transform: uppercase;

    ul {
      list-style: none;
      margin: 0;
      padding: 0;

      li {
        float: left;
        margin-right: 20px;
      }
    }

    span.last-answer-date {
      margin-left: 10px;
    }
  }

  .summary {
    margin: 0 0 10px 0;
  }

  .user-meta {
    float: left;
    font-size: 12px;
    margin: 0 20px 20px 0;
    width: 110px;

    .asked-by {
      margin-bottom: 25px;

      .answers,
      .points,
      .solutions {
        display: block;
      }

      .solutions {
        font-weight: bold;
      }

      .karma-titles {
        list-style: none;
        margin: 0;
        padding: 0;

        li {
          background: #fff;
          text-transform: uppercase;
          margin: 10px 0;
          padding: 5px;
        }
      }
    }
  }

  .question-tools {
    margin: 0 0 20px 130px;
    text-align: right;

    .btn {
      margin: 10px 0;
    }

    .me-too {
      float: left;

      .btn {
        margin: 0;
      }
    }

    p {
      text-align: left;
    }
  }

  .report {
    margin-bottom: 20px;

    input,
    select {
      display: none;
    }

    .link-btn,
    .link-btn:visited,
    .link-btn:hover {
      color: @textLightGrey;
      display: block;
      float: right;
      font-size: 12px;
      text-transform: uppercase;
    }
  }

  .sidebar-nav {
    margin-bottom: 20px;

    &.condensed {
      margin-bottom: 0;
    }
  }

  .sidebox {
    margin-bottom: 20px;

    &.condensed {
      margin-bottom: 0;
    }
  }

  #details-submit {
    display: none;
  }

  #question-details {
    select {
      .box-sizing(border-box);
      display: none;
      width: 100%;
    }

    &.editing {
      select {
        display: block;
      }

      .detail {
        display: none;
      }

      #details-submit {
        display: block;
      }

      #details-edit {
        display: none;
      }
    }
  }

  #question-reply {
    &:before {
      display: none;
    }

    textarea {
      margin-top: 10px;
      width: 510px;
    }

    .editor-tools {
      background: transparent;
    }
  }

  .system-details {
    text-transform: uppercase;

    ul {
      list-style: none;
      margin: 0;
      padding: 0;

      li {
        margin-bottom: 2px;
      }
    }
  }

  #tags {
    text-transform: uppercase;

    button {
      background: transparent;
      border: 0;
      color: @textDarkOrange;
      cursor: pointer;
      margin: 0 0 0 5px;
      outline: none;
      padding: 0;
    }

    ul {
      list-style: none;
      margin: 0 0 12px 0;
      padding: 0;

      li {
        float: left;
        margin-right: 12px;

        a,
        a:visited,
        a:hover {
          color: @textGrey;
        }
      }

      &.immutable {
        button {
          display: none;
        }
      }
    }

    .btn {
      float: right;
    }

    .searchbox {
      display: block;
      margin-bottom: 12px;
      width: 140px;
    }
  }

  #vote-thanks-kbox {
    text-align: left;

    input#id_email {
      width: 230px;
    }
  }

  #more-system-details-kbox {
    margin-left: -115px;
    width: 720px;

    h1 {
      display: none;
    }

    h2 {
      font-size: 20px;
      font-weight: normal;
      margin: 15px 0 5px;
    }

    p,
    li {
      color: @textGrey;
      list-style: none;
      margin: 0;
    }

    div.about-support {
      ul {
        padding-left: 60px;
        li {
          list-style: disc;

          &.inactive {
            opacity: 0.5;
          }

          .key {
            font-weight: bold;
          }
        }
      }
    }

    div.plugins {
      li {
        background: transparent url(../img/questions/icon.plugin.gif) no-repeat 0 4px;
        padding: 2px 0 2px 25px;
      }
    }

    .bottom-close {
      margin: 10px 0 0;
      text-align: right;
    }
  }

  #email-subscribe-kbox {
    left: -150px;
    text-transform: none;
    top: 20px;
    width: 330px;

    ul.errorlist {
      margin: 0;
      padding: 0;

      li {
        margin: 0;
        padding: 0;
      }
    }

    a {
      padding: 0;
    }

    input#id_email {
      width: 270px;
    }

    form {
      ul {
        list-style: none;
        margin: 0;
        padding: 10px 0;
      }
    }
  }

  #report-abuse {
    margin-bottom: 20px;
  }
}
/* ... */

